--- a/blink_2/blink_2.ioc
+++ b/blink_2/blink_2.ioc
@@ -14,13 +14,14 @@ Mcu.IP3=USART2
 Mcu.IPNb=4
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin2=PA5
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.PinsNb=6
+Mcu.Pin0=PC13
+Mcu.Pin1=PA2
+Mcu.Pin2=PA3
+Mcu.Pin3=PA5
+Mcu.Pin4=PA13
+Mcu.Pin5=PA14
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -28,6 +29,7 @@ MxCube.Version=6.14.1
 MxDb.Version=DB.6.0.141
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -49,6 +51,10 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LED
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=BTN
+PC13.Locked=true
+PC13.Signal=GPXTI13
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -81,7 +87,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.CECFreq_Value=32786.88524590164
 RCC.CortexFreq_Value=16000000
 RCC.FamilyName=M
@@ -104,6 +110,8 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
